﻿version 1.1 
  2018-04-30 
             +added: configurable commandline appearance.
             *automatic select ForceBindIP executable file architecture.
             *ping count responses limitation.
  2018-04-28 
             ~fixed: makes commands log wrap text to display all text when 
                exceed to width because of errors in horizontal scrollbar 
                visibility. 

version 1.0
  2018-04-20 
             ~bind application to specific network interface/ip address.
             ~binding will be saved to database for re-binding.
             ~capable to auto bind during window startup.
             ~can enter commands or select predefined commands.
             ~with parameter for delayed injection based from ForceBindIP
               parameter (-i).
             ~has password protection option.
             ~automatic select ForceBindIP executable file with corresponding
               architecture based from Operating System.