@@ -1,4 +1,7 @@
 ﻿version 1.1 
+  2018-05-21 
+             ~fixed drawing command line items when index value < 0.
+             +option to show entered command.
   2018-04-30 
              +added: configurable commandline appearance.
              *automatic select ForceBindIP executable file architecture.
